--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     ext {
         compose_version = '1.0.1'
         koin_version = '2.0.1'
-        kotlin_version = "1.5.20"
+        kotlin_version = "1.5.21"
         retrofit_version = "2.7.0"
         kotlin_coroutines = '1.3.9'
     }
@@ -13,7 +13,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
