--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -14,6 +16,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        buildConfigField 'String', 'BASE_URL', '\"https://api.spoonacular.com/\"'
     }
 
     buildTypes {
@@ -29,9 +33,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    kapt {
+        correctErrorTypes = true
+        generateStubs = true
+    }
 }
 
 dependencies {
+
+    implementation(project(":domain"))
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -50,9 +61,8 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC6"
 
     //DI
-    implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation 'com.google.dagger:hilt-android:2.39.1'
+    kapt 'com.google.dagger:hilt-compiler:2.39.1'
 
     //Networking
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
