--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -29,7 +29,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = Versions.jvmTargetVersion
     }
 
     kapt {
@@ -40,35 +40,36 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    //Lifecycle
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-
-    //Reactive
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC6"
-
-    //DI
-    implementation 'com.google.dagger:hilt-android:2.39.1'
-    kapt 'com.google.dagger:hilt-compiler:2.39.1'
+    //Base
+    implementation(Dependencies.androidxCoreCoreKtx)
+    implementation(Dependencies.androidxAppcompatAppcompat)
+    implementation(Dependencies.comGoogleAndroidMaterialMaterial)
 
     //Networking
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
+    implementation(Dependencies.retrofit2Retrofit)
+    implementation(Dependencies.retrofit2ConverterJson)
+    implementation(Dependencies.retrofit2AdapterRxjava2)
+    implementation(Dependencies.okhttpLoggingInterceptor)
 
     //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01"
+    implementation(Dependencies.kotlinCoroutinesCore)
+    implementation(Dependencies.kotlinCoroutinesAndroid)
+    implementation(Dependencies.lifecycleRuntimeKtx)
 
-    implementation "androidx.activity:activity-compose:1.3.0-alpha05"
+    //DI
+    implementation(Dependencies.daggerHilt)
+    kapt(Dependencies.daggerHiltCompiler)
+
+    //Reactive
+    implementation(Dependencies.rxJava2RxAndroid)
+    implementation(Dependencies.rxJava3RxJava)
+
+    //Lifecycle
+    implementation(Dependencies.lifecycleCommonJava8)
+    implementation(Dependencies.lifecycleExtensions)
+
+    //Test
+    testImplementation(Dependencies.junit)
+    androidTestImplementation(Dependencies.androidxTestExtJunit)
+    androidTestImplementation(Dependencies.androidxEspressoCore)
 }
