перенес dependencies в build src

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        kotlinCompilerExtensionVersion Versions.composeVersion
+        kotlinCompilerVersion Versions.kotlinCompilerVersion
     }
     packagingOptions {
         resources {
