preview for launchscreen and error handling added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,4 +101,7 @@ dependencies {
     testImplementation(Dependencies.junit)
     androidTestImplementation(Dependencies.androidxTestExtJunit)
     androidTestImplementation(Dependencies.androidxEspressoCore)
+
+    //Navigation compose
+    implementation(Dependencies.navigationCompose)
 }
