--- a/data/build.gradle
+++ b/data/build.gradle
@@ -49,13 +49,13 @@ dependencies {
     implementation(Dependencies.comGoogleAndroidMaterialMaterial)
 
     // Retrofit 2
-    implementation("com.squareup.retrofit2:retrofit:2.9.0")
-    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation(Dependencies.retrofit2Retrofit)
+    implementation(Dependencies.retrofit2ConverterJson)
 
     // OkHttp
-    implementation("com.squareup.okhttp3:okhttp-bom:5.0.0-alpha.7")
-    implementation("com.squareup.okhttp3:okhttp")
-    implementation("com.squareup.okhttp3:logging-interceptor")
+    implementation(Dependencies.okHttpBom)
+    implementation(Dependencies.okHttp)
+    implementation(Dependencies.okHttpLogInterceptor)
 
     //Kotlin Coroutines
     implementation(Dependencies.kotlinCoroutinesCore)
