--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -65,10 +65,10 @@ dependencies {
 
     testImplementation(Dependencies.junit)
     androidTestImplementation(Dependencies.androidxEspressoCore)
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation(Dependencies.androidxTestExtJunit)
 
     // OkHttp
-    implementation("com.squareup.okhttp3:okhttp-bom:5.0.0-alpha.7")
-    implementation("com.squareup.okhttp3:okhttp")
-    implementation("com.squareup.okhttp3:logging-interceptor")
+    implementation(Dependencies.okHttpBom)
+    implementation(Dependencies.okHttp)
+    implementation(Dependencies.okHttpLogInterceptor)
 }
