--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,12 @@ dependencies {
     testImplementation(Dependencies.junit)
     androidTestImplementation(Dependencies.androidxEspressoCore)
     androidTestImplementation(Dependencies.androidxTestExtJunit)
+    testImplementation("org.mockito:mockito-inline:3.12.4")
+    testImplementation("org.mockito:mockito-junit-jupiter:3.12.4")
+    testImplementation("app.cash.turbine:turbine:0.7.0")
+    testImplementation("androidx.test.ext:truth:1.5.0")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4")
+    androidTestImplementation("androidx.test.ext:truth:1.5.0")
 
     //Navigation compose
     implementation(Dependencies.navigationCompose)
